# StarPU --- Runtime system for heterogeneous multicore architectures.
#
# Copyright (C) 2009-2023  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
#
# StarPU is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.5.0
==============================================

New features:
  * Add starpu_data_register_victim_selector to let schedulers select eviction
    victims.
  * Add bus performance model for HIP driver.
  * New scheduler darts (Data-Aware Reactive Task Scheduling)

Small features:
  * Add FXT option -use-task-color to propagate the specified task
    color to the contexts
  * Add flag STARPU_SCHED_SIMPLE_FIFOS_BELOW_READY_FIRST and
    environment variable STARPU_SCHED_FIFO_READY_FIRST to let FIFO
    components pick up ready tasks first.
  * Allow scheduling policies to be loaded with STARPU_SCHED&co but
    not to be in the list of predefined policies

StarPU 1.4.3
==============================================
Small features:
  * Add starpu_data_partition_readonly_downgrade_submit().

StarPU 1.4.2
==============================================
Small features:
  * New functions starpu_mpi_data_cpy() and starpu_mpi_recv_prio()
  * New functions starpu_bind_thread_on_worker(),
    starpu_bind_thread_on_main(), starpu_bind_thread_on_cpu(),
    and starpu_cpu_os_index()
  * New macro STARPU_CUSOLVER_REPORT_ERROR

StarPU 1.4.1
==============================================

Small features:
  * Add starpu_mpi_tags_{allocate,free} functions to manage mpi data
    tags in distributed memory.

Changes: